Added service account injection

--- a/notebooks/official/tensorboard/vertex_tensorboard_custom_training_with_custom_container.ipynb
+++ b/notebooks/official/tensorboard/vertex_tensorboard_custom_training_with_custom_container.ipynb
@@ -626,8 +626,9 @@
       },
       "outputs": [],
       "source": [
-        "USER_SA_NAME = \"your-serivce-account-name\"  # @param {type:\"string\"}\n",
-        "SA_EMAIL = \"{}@{}.iam.gserviceaccount.com\".format(USER_SA_NAME, PROJECT_ID)"
+        "# USER_SA_NAME = \"your-serivce-account-name\"  # @param {type:\"string\"}\n",
+        "# SA_EMAIL = \"{}@{}.iam.gserviceaccount.com\".format(USER_SA_NAME, PROJECT_ID)\n",
+        "SA_EMAIL = \"[service-account]\"  # @param {type:\"string\"}"
       ]
     },
     {
@@ -638,8 +639,8 @@
       },
       "outputs": [],
       "source": [
-        "# Create service account.\n",
-        "! gcloud --project={PROJECT_ID} iam service-accounts create {USER_SA_NAME}"
+        "# # Create service account.\n",
+        "# ! gcloud --project={PROJECT_ID} iam service-accounts create {USER_SA_NAME}"
       ]
     },
     {
@@ -650,10 +651,10 @@
       },
       "outputs": [],
       "source": [
-        "# Grant Cloud Storage permission.\n",
-        "! gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
-        "   --member=serviceAccount:{SA_EMAIL} \\\n",
-        "   --role=roles/storage.admin"
+        "# # Grant Cloud Storage permission.\n",
+        "# ! gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
+        "#    --member=serviceAccount:{SA_EMAIL} \\\n",
+        "#    --role=roles/storage.admin"
       ]
     },
     {
@@ -664,10 +665,10 @@
       },
       "outputs": [],
       "source": [
-        "# Grant AI Platform permission.\n",
-        "! gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
-        "   --member=serviceAccount:{SA_EMAIL} \\\n",
-        "   --role=roles/aiplatform.user"
+        "# # Grant AI Platform permission.\n",
+        "# ! gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
+        "#    --member=serviceAccount:{SA_EMAIL} \\\n",
+        "#    --role=roles/aiplatform.user"
       ]
     },
     {
