Added gcloud version debug info

--- a/notebooks/official/tensorboard/vertex_tensorboard_custom_training_with_custom_container.ipynb
+++ b/notebooks/official/tensorboard/vertex_tensorboard_custom_training_with_custom_container.ipynb
@@ -24,6 +24,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "! gcloud version"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ed2pOXQMb8fY"
