Fixed sa injection

--- a/notebooks/official/tensorboard/vertex_tensorboard_custom_training_with_custom_container.ipynb
+++ b/notebooks/official/tensorboard/vertex_tensorboard_custom_training_with_custom_container.ipynb
@@ -637,7 +637,9 @@
       "source": [
         "# USER_SA_NAME = \"your-serivce-account-name\"  # @param {type:\"string\"}\n",
         "# SA_EMAIL = \"{}@{}.iam.gserviceaccount.com\".format(USER_SA_NAME, PROJECT_ID)\n",
-        "SA_EMAIL = \"[service-account]\"  # @param {type:\"string\"}"
+        "SERVICE_ACCOUNT = \"[service-account-email]\"  # @param {type:\"string\"}\n",
+        "\n",
+        "print(f\"SERVICE_ACCOUNT = '{SERVICE_ACCOUNT}'\")"
       ]
     },
     {
@@ -858,7 +860,7 @@
         "                },\n",
         "            }\n",
         "        ],\n",
-        "        \"service_account\": SA_EMAIL,\n",
+        "        \"service_account\": SERVICE_ACCOUNT,\n",
         "        \"tensorboard\": TENSORBOARD_INSTANCE_NAME,\n",
         "        \"base_output_directory\": {\"output_uri_prefix\": BASE_OUTPUT_DIR},\n",
         "    },\n",
